tests/miniJava/neg/006437_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while System.out.println 0 ) { } } }
